--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "serve:build": "npx serve -s build -l 3000",
+    "server": "node server/index.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -15,14 +16,20 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "cors": "^2.8.5",
+    "dictionary-da": "^6.0.0",
+    "express": "^4.21.2",
     "fast-xml-parser": "^4.5.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "nspell": "^2.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-pageflip": "^2.0.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "eslintConfig": {
     "extends": [
