--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
+    "react-mentions": "^4.4.10",
     "react-pageflip": "^2.0.3",
     "react-scripts": "5.0.1",
     "socket.io": "^4.7.5",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "pdf-parse": "^1.1.1"
   }
 }
