--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "promotion-leaflet-proofing-tool",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Digital promotion leaflet proofing and editing tool for internal marketing teams",
   "main": "index.js",
   "scripts": {
@@ -8,8 +8,10 @@
     "build": "react-scripts build",
     "serve:build": "npx serve -s build -l 3000",
     "server": "node server/index.js",
+    "dev": "concurrently \"npm run start\" \"npm run server\"",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/ --ext .js,.jsx"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -23,6 +25,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "nspell": "^2.1.5",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
